[package]
name = "monster_fighter"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "0.6"
default-features = false
features = [
  "dynamic", 
  "trace",
  "render",
  "bevy_winit",
  "bevy_gilrs",
  "png",
  "hdr",
  "filesystem_watcher",
  "x11"
]

[dependencies.bevy_kira_audio]
version = "0.8.0"
features = [
  "wav"
]

[dependencies]
bevy-inspector-egui = "0.7.0"
rand = "0.8.0" # Same version as bevy
